added game and controller

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   </style>
   <script src="../p5.js"></script>
   <script src="../addons/p5.sound.js"></script>
-  <script src="sketch.js"></script>
+ <script src="snekgem.js"></script>
 </head>
 
 <body>
   <main>
+    <input class="keypress" type="text" id="fname" name="fname"><br><br>
+    <button>Click me!</button>
   </main>
 </body>
 
