added ui and fixed controller

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
 <body>
   <main>
-    <input class="keypress" type="text" id="fname" name="fname"><br><br>
-    <button>Click me!</button>
+    <h1>
+      D5 will turn the snake down <br>
+      E5 will turn the snake left <br>
+      G5 will turn the snake up <br>
+      A5 will turn the snake right <br>
+    </h1>
   </main>
 </body>
 
