--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       margin: 0;
     }
   </style>
-  <script src="../p5.js"></script>
-  <script src="../addons/p5.sound.js"></script>
- <script src="snekgem.js"></script>
+  <script src="Ljudfysik_projekt/p5.js"></script>
+  <script src="Ljudfysik_projekt/addons/p5.sound.js"></script>
+  <script src="snekgem.js"></script>
 </head>
 
 <body>
